# webrtc

./: .gitignore  AUTHORS  BUILD.gn  DEPS  LICENSE_THIRD_PARTY  PRESUBMIT.py  buildbucket.config  commit-queue.cfg  common_types.cc  common_types.h  config.star  cr-buildbucket.cfg  deps_clear_hook.py  luci-scheduler.cfg  project.config  sage  style-guide.md  webrtc.gni  whitespace.txt
api/: BUILD.gn  DEPS  array_view.h  array_view_unittest.cc  create_modular_peerconnection_factory.cc  create_modular_peerconnection_factory.h  create_peerconnection_factory.cc  failurereason.h  frame_transformer_interface.h  jsep.h  mediastreaminterface.cc  optional.h  optional_unittest.cc  peer_connection_interface.h  peerconnectioninterface.h  peerconnectionproxy.h  rtp_headers.cc  rtp_headers.h  rtp_packet_infos.h  rtpparameters.h  rtptransceiverinterface.h  scoped_refptr.h  sequence_checker.cc  sequence_checker.h  setremotedescriptionobserver.cc  setremotedescriptionobserver.h  setremotedescriptionobserver_unittest.cc  statstypes.cc  umametrics.h
api/networking/: BUILD.gn  stun.cc  stun.h  stun_unittest.cc
api/voip/: BUILD.gn  DEPS  voip_engine.h  voip_engine_builder.cc  voip_engine_builder.h  voip_engine_builder_unittest.cc
audio/: BUILD.gn  audio_receive_stream.cc  audio_receive_stream.h  audio_receive_stream_unittest.cc  audio_send_stream.cc  audio_send_stream.h  audio_send_stream_tests.cc  audio_send_stream_unittest.cc  channel.cc  channel_receive.cc  channel_receive.h  channel_send.cc  channel_send.h  time_interval.cc  time_interval.h  transport_feedback_packet_loss_tracker.cc  transport_feedback_packet_loss_tracker_unittest.cc
audio/voip/: BUILD.gn  audio_channel.cc  audio_channel.h  audio_egress.cc  audio_egress.h  audio_ingress.cc  audio_ingress.h  voip_core.cc  voip_core.h
audio/voip/test/: BUILD.gn  DEPS  audio_channel_unittest.cc  audio_egress_unittest.cc  audio_ingress_unittest.cc  voip_core_unittest.cc
build_overrides/: build.gni
call/: BUILD.gn  OWNERS  bitrate_allocator.cc  bitrate_estimator_tests.cc  call.cc  call_config.h  call_perf_tests.cc  call_unittest.cc  flexfec_receive_stream_impl.cc  rtcp_demuxer_unittest.cc  rtp_rtcp_demuxer_helper_unittest.cc  rtp_stream_receiver_controller.cc  rtp_transport_controller_send.cc  rtp_transport_controller_send.h  rtp_transport_controller_send_interface.h  rtp_video_sender.cc  version.cc  video_config.cc  video_send_stream.h
common_audio/: fir_filter_factory.cc  wav_header.cc
common_video/: BUILD.gn  bitrate_adjuster.cc  video_frame.cc
crypto/: DEPS  OWNERS
docs/: faq.md
examples/: BUILD.gn
experiments/: field_trials.py
g3doc/: become_a_committer.md
logging/: BUILD.gn  build.ninja.d
media/: BUILD.gn
modules/: BUILD.gn
modules/audio_processing/agc2/: BUILD.gn  DEPS  adaptive_agc.cc  adaptive_agc.h  adaptive_digital_gain_applier.cc  adaptive_digital_gain_applier.h  adaptive_digital_gain_applier_unittest.cc  adaptive_digital_gain_controller_unittest.cc  adaptive_mode_level_estimator.h  agc2_common.h  agc2_testing_common.h  apm_vad.cc  apm_vad.h  fixed_gain_controller.cc  fixed_gain_controller.h  fixed_gain_controller_unittest.cc  gain_curve_applier.cc  gain_curve_applier.h  gain_curve_applier_unittest.cc  input_volume_controller.cc  input_volume_controller.h  input_volume_controller_unittest.cc  interpolated_gain_curve.cc  interpolated_gain_curve.h  interpolated_gain_curve_unittest.cc  level_estimator.cc  level_estimator.h  level_estimator_unittest.cc  limiter.cc  limiter.h  rms_level_estimator.cc  rms_level_estimator.h  rms_level_estimator_unittest.cc  saturation_protector.cc  saturation_protector.h  saturation_protector_unittest.cc  vad_with_level.h  vector_float_frame.h
modules/audio_processing/agc2/adaptive_mode/: BUILD.gn  README.md  adaptive_agc.cc  adaptive_agc.h  adaptive_mode_level_estimator.h  apm_vad.cc  apm_vad.h  rms_level_estimator.cc  rms_level_estimator.h  saturation_protector.cc  saturation_protector.h  vad_with_level.h
ortc/: ortcfactory.cc  ortcrtpreceiveradapter.cc  ortcrtpsenderadapter.cc  rtpparametersconversion.cc  rtptransportadapter.cc  rtptransportcontrolleradapter.cc
p2p/: BUILD.gn
pc/: BUILD.gn  channel.cc  channel.h  channel_unittest.cc  createpeerconnectionfactory.cc  dtlssrtptransport.cc  dtlssrtptransport_unittest.cc  dtmfsender.cc  ice_server_parsing.cc  ice_server_parsing_unittest.cc  iceserverparsing.cc  jsep_transport.h  jsep_transport_controller.cc  jseptransport2.cc  jseptransport2_unittest.cc  jseptransport_unittest.cc  jseptransportcontroller.cc  media_session.cc  mediasession.cc  mediasession.h  mediasession_unittest.cc  peer_connection.cc  peer_connection.h  peer_connection_bundle_unittest.cc  peer_connection_factory.cc  peer_connection_factory.h  peer_connection_histogram_unittest.cc  peer_connection_ice_unittest.cc  peer_connection_integrationtest.cc  peer_connection_media_unittest.cc  peer_connection_proxy.h  peer_connection_rampup_tests.cc  peerconnection.cc  peerconnection.h  peerconnection_bundle_unittest.cc  peerconnection_ice_unittest.cc  peerconnection_integrationtest.cc  peerconnection_jsep_unittest.cc  peerconnection_media_unittest.cc  peerconnection_rtp_unittest.cc  (+40 more)
rtc_base/: BUILD.gn  async_resolver.cc  asynctcpsocket.cc  asynctcpsocket.h  base64.cc  base64.h  buffer_unittest.cc  bufferqueue.cc  bufferqueue.h  bytebuffer.cc  bytebuffer.h  checks.cc  checks.h  copy_on_write_buffer.h  copyonwritebuffer.cc  copyonwritebuffer.h  event.cc  fakesslidentity.cc  fakesslidentity.h  file_rotating_stream_unittest.cc  filerotatingstream.cc  helpers_unittest.cc  http_common.cc  httpbase.cc  httpserver.cc  logging.cc  logging.h  logging_internals.cc  logging_internals.h  logging_unittest.cc  messagequeue_unittest.cc  nattypes.cc  net_helpers.h  nethelper.cc  nethelpers.cc  network.cc  network_monitor.h  network_unittest.cc  no_return.h  nullsocketserver.cc  (+54 more)
rtc_tools/: BUILD.gn
sdk/: BUILD.gn
stats/: rtcstats.cc
system_wrappers/: BUILD.gn
test/: BUILD.gn  OWNERS  call_test.cc  call_test.h  encoder_settings.cc  fake_encoder.cc  fake_network_pipe.cc  (+9 more)
(+967 files in other folders)
