# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_source_set("stun_types") {
  visibility = [ "*" ]
  sources = [
    "stun.cc",
    "stun.h",
  ]

  deps = [
    "../../rtc_base:checks",
    "../../rtc_base:rtc_base",
    "../../rtc_base:rtc_base_approved",
  ]
}

rtc_source_set("stun_unittest") {
  visibility = [ "*" ]
  testonly = true
  sources = [
    "stun_unittest.cc",
  ]
  deps = [
    ":stun_types",
    "../../p2p:stun_types",
    "../../rtc_base",
    "../../rtc_base:macromagic",
    "../../rtc_base:rtc_base_approved",
    "../../test:test_support",
    "//testing/gtest",
  ]
}
