#Copyright(c) 2020 The WebRTC project authors.All Rights Reserved.
#
#Use of this source code is governed by a BSD - style license
#that can be found in the LICENSE file in the root of the source
#tree.An additional intellectual property rights grant can be found
#in the file PATENTS.All contributing project authors may
#be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_library("voip_core") {
  sources = [
    "voip_core.cc",
    "voip_core.h",
  ]
  deps = [
    ":audio_channel",
    "../../api:scoped_refptr",
    "../../api/audio_codecs:audio_codecs_api",
    "../../api/task_queue",
    "../../api/task_queue:default_task_queue_factory",
    "../../api/voip:voip_api",
    "../../audio",
    "../../modules/audio_device:audio_device_api",
    "../../modules/audio_mixer:audio_mixer_impl",
    "../../modules/audio_processing:api",
    "../../modules/rtp_rtcp",
    "../../modules/utility",
    "../../rtc_base:checks",
    "../../rtc_base:criticalsection",
    "../../rtc_base:logging",
  ]
}

rtc_library("audio_channel") {
  sources = [
    "audio_channel.cc",
    "audio_channel.h",
  ]
  deps = [
    ":audio_egress",
    ":audio_ingress",
    "../../api:transport_api",
    "../../api/audio_codecs:audio_codecs_api",
    "../../api/task_queue",
    "../../modules/audio_device:audio_device_api",
    "../../modules/rtp_rtcp",
    "../../modules/rtp_rtcp:rtp_rtcp_format",
    "../../modules/utility",
    "../../rtc_base:checks",
    "../../rtc_base:criticalsection",
    "../../rtc_base:logging",
    "../../rtc_base:macromagic",
    "../../rtc_base:rtc_base_approved",
  ]
}

rtc_library("audio_egress") {
  sources = [
    "audio_egress.cc",
    "audio_egress.h",
  ]
  deps = [
    "../../api/audio_codecs:audio_codecs_api",
    "../../api/task_queue",
    "../../audio",
    "../../audio/utility:audio_frame_operations",
    "../../call:audio_sender_interface",
    "../../modules/audio_coding",
    "../../modules/rtp_rtcp",
    "../../modules/rtp_rtcp:rtp_rtcp_format",
    "../../rtc_base:logging",
    "../../rtc_base:rtc_event",
    "../../rtc_base:rtc_task_queue",
    "../../rtc_base:thread_checker",
    "../../rtc_base:timeutils",
  ]
}

rtc_library("audio_ingress") {
  sources = [
    "audio_ingress.cc",
    "audio_ingress.h",
  ]
  deps = [
    "../../api:array_view",
    "../../api:rtp_headers",
    "../../api:scoped_refptr",
    "../../api:transport_api",
    "../../api/audio:audio_mixer_api",
    "../../api/audio_codecs:audio_codecs_api",
    "../../audio",
    "../../audio/utility:audio_frame_operations",
    "../../modules/audio_coding",
    "../../modules/rtp_rtcp",
    "../../modules/rtp_rtcp:rtp_rtcp_format",
    "../../modules/utility",
    "../../rtc_base:criticalsection",
    "../../rtc_base:logging",
    "../../rtc_base:safe_minmax",
    "../../rtc_base:thread_checker",
    "../../rtc_base:timeutils",
  ]
}
